<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_memo_header"
            android:textColor="@color/orange"
            android:textStyle="bold|italic"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:orientation="horizontal">


        <EditText
            android:id="@+id/title"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/dark_white"
            android:hint="@string/title_hint"
            android:padding="7dp"
            android:background="@color/dark_background"
            android:textSize="23sp"
            android:inputType="text"
            android:lines="20"
            />

            <!-- next view is used as spacer -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_location"
                android:layout_width="70dp"
                android:layout_height="52dp"
                android:layout_gravity="end"
                android:text="@string/add_location"
                android:backgroundTint="@color/dark_background"
                android:layout_marginRight="10dp"
                android:padding="0dp"
                android:textColor="@color/orange"
                android:textSize="10sp"
                app:cornerRadius="12dp"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout"
            android:layout_above="@+id/save_button"
            android:gravity="top"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="30dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/dark_white"
            android:hint="@string/content_hint"
            android:background="@color/dark_background"
            android:inputType="textMultiLine"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="30dp"
            android:text="@string/save_memo"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:backgroundTint="@color/orange"
            app:cornerRadius="12dp"
            />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>