<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homepage_header"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_margin="10dp"
            android:layout_gravity="start"
            />
            <!-- next view is used as spacer -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <ImageButton
                android:id="@+id/map_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@mipmap/map_icon"
                android:layout_gravity="end"
                />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/memos_list"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header_linear_layout"
            android:layout_above="@+id/memo_creation_button"
            />

        <TextView
            android:id="@+id/empty_memos_view"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_notes"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/memo_creation_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="30dp"
            android:text="@string/add_memo"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:backgroundTint="@color/orange"
            app:cornerRadius="12dp"
            />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>